--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "ts-node-dev src/server.ts"
+        "dev": "ts-node-dev src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
     "devDependencies": {
         "@types/express": "^4.17.12",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
         "@typescript-eslint/parser": "^4.28.0",
         "eslint": "^7.29.0",
@@ -16,5 +18,11 @@
         "prettier-eslint": "^12.0.0",
         "ts-node-dev": "^1.1.6",
         "typescript": "^4.3.4"
+    },
+    "dependencies": {
+        "reflect-metadata": "^0.1.13",
+        "sqlite3": "^5.0.2",
+        "typeorm": "^0.2.34",
+        "uuid": "^8.3.2"
     }
 }
