--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "typescript": "^4.3.4"
     },
     "dependencies": {
+        "express-async-errors": "^3.1.1",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.0.2",
         "typeorm": "^0.2.34",
