--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "ts-node-dev src/server.ts",
+		"dev": "ts-node-dev ./src/server.ts -p ./../tsconfig.json",
 		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
 	},
 	"devDependencies": {
